// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StaticContentScreen renders correctly with optional props 1`] = `
<BackgroundContainer>
  <BackButton
    text="Back to Menu"
  />
  <ScrollViewMock
    style={
      Object {
        "backgroundColor": "rgba(255, 255, 255, 0.70)",
        "borderTopLeftRadius": 10,
        "borderTopRightRadius": 10,
        "height": "100%",
        "padding": 20,
      }
    }
  >
    <Title
      text="Title"
    />
    <View
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <Component />
    </View>
  </ScrollViewMock>
</BackgroundContainer>
`;

exports[`StaticContentScreen renders correctly without optional props 1`] = `
<BackgroundContainer>
  <ScrollViewMock
    style={
      Object {
        "backgroundColor": "rgba(255, 255, 255, 0.70)",
        "borderTopLeftRadius": 10,
        "borderTopRightRadius": 10,
        "height": "100%",
        "padding": 20,
      }
    }
  >
    <View
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <Component />
    </View>
  </ScrollViewMock>
</BackgroundContainer>
`;
